include/dtl/bindings/c/dtl_communicator.h

DTL_C_BEGIN
DTL_API dtl_status dtl_send(dtl_context_t ctx, const void* buf,
                            dtl_size_t count, dtl_dtype dtype,
                            dtl_rank_t dest, dtl_tag_t tag);
DTL_API dtl_status dtl_recv(dtl_context_t ctx, void* buf,
                            dtl_size_t count, dtl_dtype dtype,
                            dtl_rank_t source, dtl_tag_t tag);
DTL_API dtl_status dtl_sendrecv(dtl_context_t ctx,
                                 const void* sendbuf, dtl_size_t sendcount,
                                 dtl_dtype senddtype, dtl_rank_t dest,
                                 dtl_tag_t sendtag,
                                 void* recvbuf, dtl_size_t recvcount,
                                 dtl_dtype recvdtype, dtl_rank_t source,
                                 dtl_tag_t recvtag);
DTL_API dtl_status dtl_isend(dtl_context_t ctx, const void* buf,
                              dtl_size_t count, dtl_dtype dtype,
                              dtl_rank_t dest, dtl_tag_t tag,
                              dtl_request_t* request);
DTL_API dtl_status dtl_irecv(dtl_context_t ctx, void* buf,
                              dtl_size_t count, dtl_dtype dtype,
                              dtl_rank_t source, dtl_tag_t tag,
                              dtl_request_t* request);
DTL_API dtl_status dtl_wait(dtl_request_t request);
DTL_API dtl_status dtl_waitall(dtl_size_t count, dtl_request_t* requests);
DTL_API dtl_status dtl_test(dtl_request_t request, int* completed);
DTL_API void dtl_request_free(dtl_request_t request);
DTL_API dtl_status dtl_barrier(dtl_context_t ctx);
DTL_API dtl_status dtl_broadcast(dtl_context_t ctx, void* buf,
                                  dtl_size_t count, dtl_dtype dtype,
                                  dtl_rank_t root);
DTL_API dtl_status dtl_reduce(dtl_context_t ctx,
                               const void* sendbuf, void* recvbuf,
                               dtl_size_t count, dtl_dtype dtype,
                               dtl_reduce_op op, dtl_rank_t root);
DTL_API dtl_status dtl_allreduce(dtl_context_t ctx,
                                  const void* sendbuf, void* recvbuf,
                                  dtl_size_t count, dtl_dtype dtype,
                                  dtl_reduce_op op);
DTL_API dtl_status dtl_gather(dtl_context_t ctx,
                               const void* sendbuf, dtl_size_t sendcount,
                               dtl_dtype senddtype,
                               void* recvbuf, dtl_size_t recvcount,
                               dtl_dtype recvdtype, dtl_rank_t root);
DTL_API dtl_status dtl_allgather(dtl_context_t ctx,
                                  const void* sendbuf, dtl_size_t sendcount,
                                  dtl_dtype senddtype,
                                  void* recvbuf, dtl_size_t recvcount,
                                  dtl_dtype recvdtype);
DTL_API dtl_status dtl_scatter(dtl_context_t ctx,
                                const void* sendbuf, dtl_size_t sendcount,
                                dtl_dtype senddtype,
                                void* recvbuf, dtl_size_t recvcount,
                                dtl_dtype recvdtype, dtl_rank_t root);
DTL_API dtl_status dtl_alltoall(dtl_context_t ctx,
                                 const void* sendbuf, dtl_size_t sendcount,
                                 dtl_dtype senddtype,
                                 void* recvbuf, dtl_size_t recvcount,
                                 dtl_dtype recvdtype);
DTL_API dtl_status dtl_gatherv(dtl_context_t ctx,
                                const void* sendbuf, dtl_size_t sendcount,
                                dtl_dtype senddtype,
                                void* recvbuf, const dtl_size_t* recvcounts,
                                const dtl_size_t* displs, dtl_dtype recvdtype,
                                dtl_rank_t root);
DTL_API dtl_status dtl_scatterv(dtl_context_t ctx,
                                 const void* sendbuf,
                                 const dtl_size_t* sendcounts,
                                 const dtl_size_t* displs, dtl_dtype senddtype,
                                 void* recvbuf, dtl_size_t recvcount,
                                 dtl_dtype recvdtype, dtl_rank_t root);
DTL_API dtl_status dtl_allgatherv(dtl_context_t ctx,
                                    const void* sendbuf,
                                    dtl_size_t sendcount, dtl_dtype dtype,
                                    void* recvbuf,
                                    const dtl_size_t* recvcounts,
                                    const dtl_size_t* displs);
DTL_API dtl_status dtl_alltoallv(dtl_context_t ctx,
                                   const void* sendbuf,
                                   const dtl_size_t* sendcounts,
                                   const dtl_size_t* sdispls,
                                   dtl_dtype senddtype,
                                   void* recvbuf,
                                   const dtl_size_t* recvcounts,
                                   const dtl_size_t* rdispls,
                                   dtl_dtype recvdtype);
DTL_API dtl_status dtl_scan(dtl_context_t ctx,
                             const void* sendbuf, void* recvbuf,
                             dtl_size_t count, dtl_dtype dtype,
                             dtl_reduce_op op);
DTL_API dtl_status dtl_exscan(dtl_context_t ctx,
                               const void* sendbuf, void* recvbuf,
                               dtl_size_t count, dtl_dtype dtype,
                               dtl_reduce_op op);
DTL_API dtl_status dtl_nccl_allreduce_device(dtl_context_t ctx,
                                             const void* sendbuf, void* recvbuf,
                                             dtl_size_t count, dtl_dtype dtype,
                                             dtl_reduce_op op);
DTL_API dtl_status dtl_nccl_allreduce_device_ex(dtl_context_t ctx,
                                                const void* sendbuf, void* recvbuf,
                                                dtl_size_t count, dtl_dtype dtype,
                                                dtl_reduce_op op,
                                                dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_broadcast_device(dtl_context_t ctx,
                                             void* buf, dtl_size_t count,
                                             dtl_dtype dtype, dtl_rank_t root);
DTL_API dtl_status dtl_nccl_broadcast_device_ex(dtl_context_t ctx,
                                                void* buf, dtl_size_t count,
                                                dtl_dtype dtype, dtl_rank_t root,
                                                dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_barrier_device(dtl_context_t ctx);
DTL_API dtl_status dtl_nccl_gatherv_device_ex(dtl_context_t ctx,
                                              const void* sendbuf, dtl_size_t sendcount,
                                              dtl_dtype senddtype,
                                              void* recvbuf, const dtl_size_t* recvcounts,
                                              const dtl_size_t* displs, dtl_dtype recvdtype,
                                              dtl_rank_t root,
                                              dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_scatterv_device_ex(dtl_context_t ctx,
                                               const void* sendbuf,
                                               const dtl_size_t* sendcounts,
                                               const dtl_size_t* displs, dtl_dtype senddtype,
                                               void* recvbuf, dtl_size_t recvcount,
                                               dtl_dtype recvdtype, dtl_rank_t root,
                                               dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_allgatherv_device_ex(dtl_context_t ctx,
                                                 const void* sendbuf, dtl_size_t sendcount,
                                                 dtl_dtype dtype,
                                                 void* recvbuf,
                                                 const dtl_size_t* recvcounts,
                                                 const dtl_size_t* displs,
                                                 dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_alltoallv_device_ex(dtl_context_t ctx,
                                                const void* sendbuf,
                                                const dtl_size_t* sendcounts,
                                                const dtl_size_t* sdispls,
                                                dtl_dtype senddtype,
                                                void* recvbuf,
                                                const dtl_size_t* recvcounts,
                                                const dtl_size_t* rdispls,
                                                dtl_dtype recvdtype,
                                                dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_scan_device_ex(dtl_context_t ctx,
                                           const void* sendbuf, void* recvbuf,
                                           dtl_size_t count, dtl_dtype dtype,
                                           dtl_reduce_op op,
                                           dtl_nccl_operation_mode mode);
DTL_API dtl_status dtl_nccl_exscan_device_ex(dtl_context_t ctx,
                                             const void* sendbuf, void* recvbuf,
                                             dtl_size_t count, dtl_dtype dtype,
                                             dtl_reduce_op op,
                                             dtl_nccl_operation_mode mode);
typedef struct dtl_message_info_s {
    dtl_rank_t source;   
    dtl_tag_t  tag;      
    dtl_size_t count;    
} dtl_message_info_t;
DTL_API dtl_status dtl_probe(dtl_context_t ctx,
                              dtl_rank_t source, dtl_tag_t tag,
                              dtl_dtype dtype,
                              dtl_message_info_t* info);
DTL_API dtl_status dtl_iprobe(dtl_context_t ctx,
                               dtl_rank_t source, dtl_tag_t tag,
                               dtl_dtype dtype,
                               int* flag, dtl_message_info_t* info);